# circleci_test_aos_ver2

./: .gitattributes  README.md  local.properties
.circleci/: config.yml
app/: build.gradle
app/src/androidTest/java/kr/co/camera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  detect_image_quality.cpp  detect_image_quality.hpp  detect_isp_error.h  detect_preprocess_algorithm.cpp  native-lib.cpp
app/src/main/java/kr/co/camera/: GlobalApplication.kt
app/src/main/java/kr/co/camera/base/: BaseActivity.kt  BaseDialog.kt  BaseFragment.kt  BaseRecyclerView.kt
app/src/main/java/kr/co/camera/etc/: BackPressCloseHandler.kt  BindingAdapter.kt  Const.kt  Dlog.kt
app/src/main/java/kr/co/camera/etc/extension/: ActivityExt.kt  ContextExt.kt  ResExt.kt  StringExt.kt
app/src/main/java/kr/co/camera/etc/view_model/: IntroCameraViewModel.kt
app/src/main/java/kr/co/camera/view/: CameraActivity.kt  LoginActivity.kt  SearchModeActivity.kt  SplashActivity.kt
app/src/main/java/kr/co/camera/view/camera/: AutoFitTextureView.kt  BaseCameraFragment.kt  Camera2Activity.kt  Camera2NewFragment.kt  CompareSizesByArea.kt  ConfirmationDialog.kt  ErrorDialog.kt  ImageSaver.kt  Operator.kt
app/src/main/java/kr/co/camera/view/dialog/: ChoiceDialog.kt  HeadDialog.kt  PetNameDialog.kt  UtilDialog.kt
app/src/main/java/kr/co/camera/view/intro/: IntroActivity.kt  IntroFirstFragment.kt  IntroSecondFragment.kt  IntroThirdFragment.kt  VpIntroAdapter.kt
app/src/main/res/drawable/: anim_head_long.xml  anim_head_short.xml  camera_background_all.xml  camera_rect_center.xml  camera_rect_green.xml  camera_rect_red.xml  camera_rect_yello.xml  camera_side_circle_green.xml  camera_side_circle_white.xml  camera_side_circle_yello.xml  center_line.xml  circle_background_gray.xml  circle_line.xml  line_red_horizon.xml  line_red_vertical.xml  tab_indicator_default.xml  tab_indicator_selected.xml  tab_selector.xml
app/src/main/res/layout/: activity_camera.xml  activity_camera2.xml  activity_intro.xml  activity_intro_camera.xml  activity_login.xml  activity_main.xml  activity_pet_list.xml  activity_result.xml  activity_save_file.xml  activity_search_mode.xml  activity_splash.xml  control.xml  dialog_choice.xml  dialog_head.xml  dialog_loading_progress_server.xml  dialog_pet_name.xml  fragment_camera.xml  fragment_intro_camera_first.xml  fragment_intro_first.xml  fragment_intro_second.xml  fragment_intro_third.xml  fragment_long_head.xml  fragment_short_head.xml  include_dk.xml  include_ju.xml  include_toolbar.xml  item_choice.xml  item_head.xml  item_pet_list.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/kr/co/camera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
